# masterly-backend

./: .gitignore  README.md  masterly-backend.cabal  stack.yaml
app/: DocumentStore.hs  Integration.hs  Main.hs  Webserver.hs
app/Integrations/: Gmail.hs  Secrets.hs.example
app/Integrations/Gmail/: Core.hs  Http.hs  MultipartBodyParser.hs  Process.hs  Storage.hs
app/Integrations/Gmail/JSON/: ListHistoryResponse.hs  Message.hs  MessageLabels.hs  MessageRef.hs  RefreshResponse.hs
src/: CommandLine.hs  Commands.hs  Core.hs  Integration.hs  Main.hs  Webserver.hs
src/Cli/: Display.hs
src/Integrations/: Gmail.hs
src/Integrations/Gmail/: Core.hs  Http.hs  Process.hs  Storage.hs
src/Integrations/Gmail/JSON/: BatchModifyRequest.hs  GmailTokenInfo.hs  ListHistoryResponse.hs  ListMessagesResponse.hs  Message.hs  MessageLabels.hs  MessageRef.hs  ModifyRequest.hs
src/Model/: EmailMessage.hs
src/Service/: Gmail.hs  Types.hs
src/Web/: Inbox.hs
